syntax = "proto3";
package team.bakkas.grpcIfs.v1.reply;

option java_multiple_files = true;

service ReplyService {
  rpc isExistReply (CheckIsExistReplyRequest) returns (CheckIsExistReplyResponse);
}

message CheckIsExistReplyRequest {
  string reviewId = 1;
  string replyId = 2;
}

message CheckIsExistReplyResponse {
  bool result = 1;
}