syntax = "proto3";
package team.bakkas.grpcIfs.v1.shop;

option java_multiple_files = true;

service ShopService {
  /**
   * 파라미터에 대응하는 shop이 존재하는지 여부를 반환하는 메소드
   * @param CheckExistShopRequest
   * @returns CheckExistShopResponse
   */
  rpc isExistShop (CheckExistShopRequest) returns (CheckExistShopResponse);

  /**
   * 해당 memberId가 shop의 주인이 맞는지 여부를 반환하는 메소드
   * @param CheckIsOwnerOfShopRequest
   * @returns CheckIsOwnerOfShopResponse
   */
  rpc isOwnerOfShop (CheckIsOwnerOfShopRequest) returns (CheckIsOwnerOfShopResponse);
}

message CheckExistShopRequest {
  string shopId = 1;
}

message CheckExistShopResponse {
  bool result = 1;
}

message CheckIsOwnerOfShopRequest {
  string shopId = 1;
  string memberId = 2;
}

message CheckIsOwnerOfShopResponse {
  bool result = 1;
}